fix comment alignment

--- a/views/assets/src/helpers/less/customization/pm-overview.less
+++ b/views/assets/src/helpers/less/customization/pm-overview.less
@@ -616,6 +616,7 @@ i {
 				.pm-comment {
 					border: none;
 					.pm-comment-container {
+						margin-left: 0px !important;
 						.pm-comment-meta {
 							justify-content: start;
 							.pm-author {
@@ -673,6 +674,7 @@ i {
 }
 
 .modal-wrapper .modal-container {
+	margin-top: 0px !important;
 	.close-single-file-modal {
 		margin-top: 10px;
 		a {
@@ -1168,4 +1170,12 @@ div#pm-calender-page .project-select-area .form-content-wrap {
 
 .pm-milestone-container .bb-icon-flag:before {
 	margin-left: 0px !important;
+}
+
+.pm-page-wrapper .pm-filter-selection select {
+	background:  var(--pm-secondary-button-background-regular) !important;
+  }
+
+#wedevs-project-manager #pm-single-task-wrap .pm-task-comment-wrap .pm-comment-content {
+	margin-left: 44px !important;
 }
